--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
-library/bin
-library/gen
-library/.project
-library/.classpath
-*.class
+#Android generated
+bin
+gen
+proguard
+
+#Eclipse
+.project
+.classpath
+.settings
+
+#IntelliJ IDEA
+.idea
+*.iml
+*.ipr
+*.iws
+out
+
+#Maven
+target
+release.properties
+pom.xml.*
+
+#Ant
+build.xml
+local.properties
+proguard.cfg
+
+#OSX
+.DS_Store
