--- a/example/AndroidManifest.xml
+++ b/example/AndroidManifest.xml
@@ -17,6 +17,6 @@
         <meta-data android:name="DATABASE" android:value="sugar_example.db" />
         <meta-data android:name="VERSION" android:value="3" />
         <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="ENCRYPTION_KEY" android:value="qwerqweradflj;qwekrjlqw;erj" />
+        <meta-data android:name="ENCRYPTION_KEY" android:value="qwerqweradflj;qwekrjlqw;erj11" />
     </application>
 </manifest> 
